plugins {
    id 'java'
    id 'application'
}

group 'com.romanwuatier'
version '1.0-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = 17

apply plugin:'application'
mainClassName = "com.romanwuattier.adventofcode2021.Main"

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}